examples/test/testpolicy11218.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11218
  namespace: namespace187
spec:
  podSelector:
    matchLabels:
      key8: value32
      key9: value37
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key7: value49
          key40: value21
      podSelector:
        matchLabels:
          key2: value6
